--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -22,6 +22,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <signal name="delete_event" handler="on_window_delete_event" last_modification_time="Wed, 15 Jun 2005 10:04:32 GMT"/>
 
   <child>
@@ -228,7 +229,7 @@
 				      <property name="label" translatable="yes"></property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
-				      <property name="justify">GTK_JUSTIFY_FILL</property>
+				      <property name="justify">GTK_JUSTIFY_RIGHT</property>
 				      <property name="wrap">False</property>
 				      <property name="selectable">False</property>
 				      <property name="xalign">1</property>
@@ -567,7 +568,7 @@
 				  <property name="label" translatable="yes"></property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
-				  <property name="justify">GTK_JUSTIFY_FILL</property>
+				  <property name="justify">GTK_JUSTIFY_RIGHT</property>
 				  <property name="wrap">False</property>
 				  <property name="selectable">False</property>
 				  <property name="xalign">1</property>
@@ -795,6 +796,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
 
   <child>
     <widget class="GtkVBox" id="progress_box">
@@ -1070,6 +1072,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <signal name="delete_event" handler="on_pvr_error_window_close" last_modification_time="Fri, 13 Jan 2006 22:53:06 GMT"/>
 
   <child>
