--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -15,7 +15,7 @@
   <property name="default_height">700</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
-  <property name="icon">guppy.png</property>
+  <property name="icon">pixmaps/guppy.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
@@ -368,7 +368,7 @@
 			      <child>
 				<widget class="GtkImage" id="image4">
 				  <property name="visible">True</property>
-				  <property name="pixbuf">turbo.png</property>
+				  <property name="pixbuf">pixmaps/turbo.png</property>
 				  <property name="xalign">0.5</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">0</property>
