--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -10,6 +10,7 @@
     <property name="default_width">1041</property>
     <property name="default_height">700</property>
     <property name="icon">pixmaps/guppy.png</property>
+    <signal name="destroy" handler="on_window_destroy"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
